fix menu button not showing on mobile

--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -10,4 +10,7 @@
   a {
     color: $link-color;
   }
+  .image {
+    margin-bottom: 1rem;
+  }
 }
