--- a/assets/scss/_navigation.scss
+++ b/assets/scss/_navigation.scss
@@ -122,6 +122,7 @@
 
   .menu-button {
     display: none;
+    cursor: pointer;
 
     @media only screen and (max-width: 768px) {
       position: relative;
